[metadata]
name = ddm
version = attr: ddm.__version__
description = Dynamic Differential Microscopy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koenderinklab/ddmPilotCode
author = Iain Muntz, James Conboy, Irene Istúriz
author_email = i.a.a.muntz@tudelft.nl
license = Apache Software License 2.0
key_words = differential dynamic microscopy, biological soft matter
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires = 
	jpype1>0.6
	nd2
	numba
	numpy
	pims
	pyfftw
	scipy
	scikit-image
	sdt-python @ git+https://git@github.com/schuetzgroup/sdt-python.git@17.3
	tdqm
	xarray
	

[options.extras_require]
dev = 
	black
	bump2version
	myst-parser
	pytest==4.6.2
	pytest-cov
	sphinxcontrib-mermaid
	sphinx-copybutton
	sphinx-rtd-theme
	sphinx-book-theme
	sphinx

[options.entry_points]
console_scripts = 
	openddm = ddm.cli:main
