[metadata]
name = openddm
version = attr: openddm.__version__
description = Dynamic Differential Microscopy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koenderinklab/openddm
author = Iain Muntz, Maurits Kok, James Conboy, Irene Istúriz
author_email = i.a.a.muntz@tudelft.nl
license = Apache Software License 2.0
key_words = differential dynamic microscopy, biological soft matter, microscopy
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = 	
	dask
	ipympl
	ipywidgets
	jpype1>0.6
	nd2
	numba
	numpy>=1.20
	matplotlib
	pims
	psutil
	scipy>=1.6
	scikit-image
	tqdm
	xarray
	
[options.extras_require]
dev = 
	black
	bump2version
	myst-parser
	pytest==4.6.2
	pytest-cov
	sphinxcontrib-mermaid
	sphinx-copybutton
	sphinx-rtd-theme
	sphinx-book-theme
	sphinx
